--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -32,7 +32,7 @@ http {
     listen                  *:443;
 
     location / {
-      proxy_pass            http://nexus-repository:8081/;
+      proxy_pass            http://204.236.246.161:8081/;
       proxy_redirect        off;
       proxy_set_header      Host $host;
       proxy_set_header      X-Real-IP $remote_addr;
@@ -46,7 +46,7 @@ http {
     listen                  *:5000;
 
     location / {
-      proxy_pass            http://nexus-repository:5000/;
+      proxy_pass            http://204.236.246.161:5000/;
       proxy_redirect        off;
       proxy_set_header      Host $host;
       proxy_set_header      X-Real-IP $remote_addr;
